--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-# Core
-django==4.2.9
-python-dotenv==1.0.1
-str2bool==1.1
-
-# UI
+asgiref==3.8.1
+dj-database-url==2.1.0
+Django==4.2.9
 django-admin-adminlte==1.0.5
-
-# Deployment
-whitenoise==6.6.0
 gunicorn==21.2.0
-
-# psycopg2-binary
-# mysqlclient
+packaging==24.0
+psycopg2==2.9.9
+python-dotenv==1.0.1
+sqlparse==0.5.0
+str2bool==1.1
+typing_extensions==4.11.0
+tzdata==2024.1
+whitenoise==6.6.0
